# media-hs

./: Media.cabal  Media.hs  README.md  cqrs-es-haskell.md  domain.md  media.cabal  stack.yaml
src/Domain/: Media.hs
src/Domain/Model/: Media.hs
src/EventSourcing/: Entity.hs  InMemoryEventStore.hs
src/Media/Domain/Model/: Media.hs
test/: HSpecTests.hs
test/EventSourcing/: EntitySpec.hs
test/Media/Domain/Model/: MediaSpec.hs
test/Media/Test/: Todo.hs
