name:           media
version:        0.1.0
synopsis:       Library for media managment (using event sourcing, CQRS)
author:         Tim McIver
build-type:     Simple
cabal-version:  >= 1.10
         
Library
     Build-Depends:     base >= 3 && < 5,
                        cryptohash,
                        bytestring,
                        containers
     Exposed-modules:   Media.Domain.Model.Media
                        EventSourcing.Entity
                        EventSourcing.InMemoryEventStore
     hs-source-dirs:    src
     ghc-options:       -Wall
   default-language:    Haskell2010

test-suite tests
   ghc-options: -Wall
   default-extensions:  OverloadedStrings
   type: exitcode-stdio-1.0
   hs-source-dirs: test, src
   main-is: Spec.hs
   other-modules:       Media.Domain.Model.MediaSpec
                        EventSourcing.EntitySpec
   build-depends:       base,
                        media,
                        cryptohash,
                        bytestring,
                        containers,
                        datetime,
                        random,
                        hspec                >= 1.8
   default-language:    Haskell2010
